# Ur

./: .gitignore  CMakeLists.txt  build-config.json  manifest.json
Resources/Models/Ship/: ship_engine_rightwing.sgm  ship_inside.sgm
Resources/Models/Workin/Asteroids/: asteroid_1.sgm
Resources/Models/Workin/Rocket/: rocket.blend
Resources/Models/Workin/Ship/: ship_engine_leftwing.sgm  ship_inside.blend
Sources/: URApplication.cpp  URApplication.h  URAsteroid.cpp  URAsteroid.h  URClient.cpp  URClient.h  UREnemy.cpp  UREnemy.h  URExplosion.cpp  URExplosion.h  URMissile.cpp  URMissile.h  URPacket.h  URRadar.cpp  URRadar.h  URServer.cpp  URServer.h  URSpaceShip.cpp  URSpaceShip.h  URTrailingEffect.cpp  URTrailingEffect.h  URWorld.cpp  URWorld.h  main.cpp
Ur/: URAsteroid.cpp  URAsteroid.h
Ur.xcodeproj/: project.pbxproj
Ur.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Ur.xcodeproj/project.xcworkspace/xcshareddata/: Ur.xccheckout
Ur.xcodeproj/xcuserdata/sidney.xcuserdatad/xcschemes/: Ur.xcscheme  xcschememanagement.plist
Ur/Classes/: URApplication.cpp  URApplication.h  URAsteroid.cpp  URAsteroid.h  URClient.cpp  URClient.h  UREnemy.cpp  UREnemy.h  URExplosion.cpp  URExplosion.h  URMissile.cpp  URMissile.h  URPacket.h  URRadar.cpp  URRadar.h  URServer.cpp  URServer.h  URSpaceShip.cpp  URSpaceShip.h  URTrailingEffect.cpp  URTrailingEffect.h  URWorld.cpp  URWorld.h
Ur/Resources/: manifest.json
Ur/Resources/Models/Asteroids/: asteroid_2.sgm
Ur/Resources/Models/Rocket/: rocket.sgm
Ur/Resources/Models/Ship/: ship_engine_left.sgm  ship_engine_leftwing.sgm  ship_engine_right.sgm  ship_inside.sgm  ship_outside.sgm  ship_radar.sgm
Ur/Resources/Models/Workin/Asteroids/: asteroid_1.blend  asteroid_1.blend1  asteroid_3.sgm
Ur/Resources/Models/Workin/Rocket/: rocket.blend  rocket.sgm
Ur/Resources/Models/Workin/Ship/: ship_engine_left.sgm  ship_engine_leftwing.sgm  ship_engine_right.sgm  ship_engine_rightwing.sgm  ship_inside.blend  ship_inside.sgm  ship_outside.blend  ship_radar.blend  ship_radar.sgm
Ur/Resources/modules/ogg/: librayne-ogg.dylib
Ur/Resources/modules/openal/include/: RALAudioResource.h
Ur/Supporting files/: Ur-Prefix.pch  main.cpp
